--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -6,12 +6,9 @@
   justify-content: space-evenly;
   align-items: center;
   border: var(--strapi-input-border);
-  border-radius: 4px;
+  border-radius: 6px;
   background-color: white;
-  position: relative;
-  margin-bottom: 12px;
-  max-width: 232px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.04);
   font-family: var(--strapi-font-family-body) !important; 
 
   .DocSearch.DocSearch-Button:hover {
